--- a/README
+++ b/README
@@ -4,9 +4,9 @@ lthread
 Introduction
 ------------
 
-lthread is a multicore/multithread coroutine library written in C. It uses [Sam Rushing's](https://github.com/samrushing) _swap function to swap lthreads. What's special about lthread is that it allows you to make *blocking calls* and *expensive* computations inside a coroutine, providing you with the advantages of coroutines and pthreads. See the http server example below. 
+lthread is a multicore/multithread coroutine library written in C. It uses [Sam Rushing's](https://github.com/samrushing) _swap function to swap lthreads. What's special about lthread is that it allows you to make *blocking calls* and *expensive* computations, blocking IO inside a coroutine, providing you with the advantages of coroutines and pthreads. See the http server example below. 
 
-lthreads are created in userspace and don't require kernel intervention, they are light weight and ideal for socket programming. lthread scheduler uses a shared stack for all running coroutines to save space, allowing you to create thousands(tested with a million lthreads) of coroutines and maintain a low memory footprint. The scheduler is hidden from the user and is created automagically in each pthread, allowing the user to take advantage of cpu cores and distribute the load by creating several pthreads, each running it's own lthread scheduler and handling its own share of coroutines. Locks are necessary when accessing global variables from lthreads running in different pthreads, and lthreads must not block on pthread condition variables as this will block the whole lthread scheduler in the pthread.
+lthreads are created in userspace and don't require kernel intervention, they are light weight and ideal for socket programming. Each lthread have separate stack, and  the stack is madvise(2)-ed to save space, allowing you to create thousands(tested with a million lthreads) of coroutines and maintain a low memory footprint. The scheduler is hidden from the user and is created automagically in each pthread, allowing the user to take advantage of cpu cores and distribute the load by creating several pthreads, each running it's own lthread scheduler and handling its own share of coroutines. Locks are necessary when accessing global variables from lthreads running in different pthreads, and lthreads must not block on pthread condition variables as this will block the whole lthread scheduler in the pthread.
 
 ![](https://github.com/halayli/lthread/blob/master/images/lthread_scheduler.png?raw=true "Lthread scheduler")
 
@@ -14,8 +14,6 @@ To run an lthread scheduler in each pthread, launch a pthread and create lthread
 
 
 ### lthread scheduler's inner works
-
-The lthread scheduler has a main stack that it uses to execute/resume lthreads on, and before it yields, the scheduler saves the current stack state + registers into the lthread and copies it back on the scheduler stack when it resumes.
 
 The scheduler is build around epoll/kqueue and uses an rbtree to track which lthreads needs to run next.
 
@@ -108,9 +106,6 @@ void lthread_exit(void **ptr);
  * This call *must* be followed by lthread_compute_end() after the computation and/or
  * blocking calls have been made to resume the lthread in its original lthread scheduler.
  * No lthread_* calls can be made during lthread_compute_begin()/lthread_compute_end(). 
- * WARNING: local variable addresses change inside lthread_compute_begin()/lthread_compute_end(),
- * you MUST NOT access pointers to local variables inside this section. Local variables
- * can still be accessed directly.
  */
  void lthread_compute_begin(void);
 ```
@@ -340,6 +335,20 @@ ssize_t lthread_sendto(int socket, const void *buffer, size_t length, int flags,
  * An lthread version of writev(2).
  */
 ssize_t lthread_writev(int fd, struct iovec *iov, int iovcnt);
+```
+
+```C
+/*
+ * An async version of write(2) for disk IO.
+ */
+ssize_t lthread_io_write(int fd, const void *buf, size_t buf_len);
+```
+
+```C
+/*
+ * An async version of read(2) for disk IO.
+ */
+ssize_t lthread_io_read(int fd, void *buf, size_t nbytes);
 ```
 
 *freebsd only*
